# loan-default-prediction

./: .gitignore  README.md  apresentacao.tex  bibliografia.bib  dissertacao.tex
experimentos/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compile_i18n.py  docker-compose.e2e.yaml  docker-compose.yaml  pyproject.toml
experimentos/.github/: copilot-instructions.md
experimentos/.github/prompts/: plan-refactorContextWithDi.prompt.md
experimentos/docs/: README.md  mkdocs.yml
experimentos/docs/docs/: architecture.md  cli.md  configuration.md  getting-started.md  index.md  infrastructure.md  methodology.md
experimentos/experiments/: __init__.py  config.py  containers.py  context.py  dataset.py  features.py  settings.py
experimentos/experiments/cli/: __init__.py  __main__.py  analysis.py  data.py  experiment.py  features.py  models.py  predict.py  train.py
experimentos/experiments/config/: __init__.py  logging.py  sentry.py  settings.py
experimentos/experiments/lib/: __init__.py  choices.py
experimentos/experiments/modeling/: train.py
experimentos/experiments/pipelines/: __init__.py
experimentos/experiments/services/: __init__.py  analysis_artifacts_repository.py  data_manager.py  data_repository.py  experiment_executor.py  experiment_params_resolver.py  feature_extractor.py  grid_search_trainer.py  inference_service.py  model_predictions_repository.py  model_repository.py  model_results_evaluator.py  model_versioning.py  models.py  path_manager.py  predictions_analyzer.py  resource_calculator.py  seed_generator.py  simple_trainer.py  storage_manager.py  stratified_data_splitter.py  training_executor.py  translator.py  unbalanced_learner_factory.py
experimentos/experiments/storage/: gcs.py  interface.py  local.py  s3.py
experimentos/experiments/utils/: git_state.py  jobs.py  models.py  overwrites.py
experimentos/integration/: __init__.py  test_experiment_pipeline.py  test_training_pipeline.py
experimentos/notebooks/: corporate-credit-rating-analysis.ipynb  lending-club-analysis.ipynb  taiwan-credit-analysis.ipynb
experimentos/terraform/: main.tf
experimentos/terraform/bootstrap/: main.tf
experimentos/tests/: __init__.py  test_dataset.py  test_features.py  test_train.py
experimentos/tests/e2e/: __init__.py  conftest.py  test_full_experiment.py
experimentos/tests/integration/: __init__.py  test_experiment.py  (+3 more)
(+262 files in other folders)
