[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "experiments"
version = "0.0.1"
description = "Experimentos do projeto."
authors = [
  { name = "William Fernandes Dias" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "loguru",
    "mkdocs",
    "mypy>=1.18.2",
    "pandas>=2.3.2",
    "pip",
    "polars[gpu]>=1.32.3",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["experiments"]
include = ["pyproject.toml", "experiments/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["experiments"]
force-sort-within-sections = true

[tool.mypy]
disable_error_code = ["import-untyped"]



