[build-system]
requires = ["flit_core >=3.2,<4", "babel"]
build-backend = "flit_core.buildapi"

[project]
name = "experiments"
version = "0.0.1"
description = "Experimentos do projeto."
authors = [
  { name = "William Fernandes Dias" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
  "GitPython>=3.1.43",
  "imbalanced-learn>=0.14.0",
  "ipykernel>=6.30.1",
  "joblib>=1.5.2",
  "loguru",
  "matplotlib>=3.10.7",
  "mkdocs",
  "mypy>=1.18.2",
  "pandas>=2.3.2",
  "pip",
  "polars[gpu]>=1.32.3",
  "pyarrow>=22.0.0",
  "pytest",
  "pytest-camel-collect>=1.0.2",
  "python-dotenv",
  "ruff",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "tqdm",
  "typer",
  "uuid7>=0.1.0",
  "xgboost>=3.1.2",
]
requires-python = "~=3.12.0"
scripts = { "ldp" = "experiments.cli.__main__:app" }


[tool.ruff]
line-length = 99
src = ["experiments"]
include = ["pyproject.toml", "experiments/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["experiments"]
force-sort-within-sections = true

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Test*", "Describe*", "For*"]
python_functions = ["test_*", "it_*", "should_*"]
